--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+# Maven
+/target
+
+
+
 # Compiled class file
 *.class
 
@@ -21,3 +27,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+
+# IntelliJ IDEA
+.idea/
+*.iml
+
