Add assertJ, prepare some tests for new method in API

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Write readable assertions -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.12.2</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>com.google.guava</groupId>
