Remove custom engine implementation Add dependency for engine game

--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
 
 
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>27.1-jre</version>
+            <groupId>io.lipinski</groupId>
+            <artifactId>game-engine</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
