--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.lipinski</groupId>
     <artifactId>lan-game</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>lan-game</name>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>io.lipinski</groupId>
             <artifactId>game-engine</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>3.0.1</version>
         </dependency>
 
     </dependencies>
