--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>com.github.lipinskipawel</groupId>
             <artifactId>game-engine</artifactId>
-            <version>3.1.0</version>
+            <version>3.2.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
