--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
         <!-- This is the platform. The engine -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
