Create linux goal in prod-maven-plugin
How to configure this goal?
You have to provide necessary configuration in your pom.xml, all required
filed can be found in prod-maven-plugin module under the LinuxBuild Mojo.

Execute mvn prod:linux to build installer for linux.

--- a/football-gui-game/pom.xml
+++ b/football-gui-game/pom.xml
@@ -94,6 +94,16 @@
                 <version>3.0.2</version>
             </plugin>
             <plugin>
+                <groupId>com.github.lipinskipawel</groupId>
+                <artifactId>prod-maven-plugin</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+                <configuration>
+                    <builtFinalNameOfJar>${build.finalName}</builtFinalNameOfJar>
+                    <directory>football-game</directory>
+                    <jdkOfNeed>jdks/jdk</jdkOfNeed>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
