Create windows goal in prod-maven-plugin
How to configure this goal?
You have to provide necessary configuration in your pom.xml, all required
filed can be found in prod-maven-plugin module under the WindowsBuild Mojo.

Execute mvn prod:windows to build installer for windows.

--- a/football-gui-game/pom.xml
+++ b/football-gui-game/pom.xml
@@ -98,9 +98,9 @@
                 <artifactId>prod-maven-plugin</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
                 <configuration>
-                    <builtFinalNameOfJar>${build.finalName}</builtFinalNameOfJar>
+                    <builtFinalNameOfJar>${project.build.finalName}</builtFinalNameOfJar>
                     <directory>football-game</directory>
-                    <jdkOfNeed>jdks/jdk</jdkOfNeed>
+                    <jdkOfNeed>jdks/jdk-13-windows</jdkOfNeed>
                 </configuration>
             </plugin>
             <plugin>
