--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Gradle
+!gradle-wrapper.jar
+
 # Maven
 target/
 
@@ -17,7 +20,6 @@ uuid.txt
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -36,4 +38,3 @@ hs_err_pid*
 # python
 venv/
 *.pyc
-
